container formateado, inicio de maquetado de efecto wave

--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Landing Page</title>
         <link href="estilos.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>hola</h1>
+        <header>
+            <nav>
+                <a id="icono" class="icono" href="#">Menú</a>
+                <div class="enlaces uno" id="enlaces">
+                    <a href="">inicio</a>
+                    <a href="">Acerca de</a>
+                    <a href="">Contacto</a>
+                </div>                
+            </nav>
+            <div class="container">
+                <div class="textos">
+                    <h1>CodeCraft</h1>
+                    <h2>Hacemos tu web ideal</h2>
+                    <a href="#">Contacto</a>
+                </div>
+                <img src="img/people.png" alt="imagen de gente">
+            </div>
+        </header>
+        <div class="wave"></div>
     </body>
 </html>
