Página index completa

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <nav>
                 <a id="icono" class="icono" href="#">Menú</a>
                 <div class="enlaces uno" id="enlaces">
-                    <a href="">inicio</a>
+                    <a href="">Inicio</a>
                     <a href="">Acerca de</a>
                     <a href="">Contacto</a>
                 </div>                
             </nav>
             <div class="container">
                 <div class="textos">
-                    <h1>CodeCraft</h1>
-                    <h2>Hacemos tu web ideal</h2>
-                    <a href="#">Contacto</a>
+                    <h1>Gerson Azabache</h1>
+                    <h2>Software Developer</h2>
+                    <a href="#">Proyectos</a>
                 </div>
                 <img src="img/people.png" alt="imagen de gente">
             </div>
