fix bug: relacion height entre header y wave

--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <nav>
-                <a id="icono" class="icono" href="#">Menú</a>
-                <div class="enlaces uno" id="enlaces">
-                    <a href="">Inicio</a>
-                    <a href="">Acerca de</a>
-                    <a href="">Contacto</a>
-                </div>                
-            </nav>
-            <div class="container">
-                <div class="textos">
-                    <h1>Gerson Azabache</h1>
-                    <h2>Software Developer</h2>
-                    <a href="#">Proyectos</a>
+        <div class="wrapper">
+            <header>
+                <nav>
+                    <a id="icono" class="icono" href="#">Menú</a>
+                    <div class="enlaces uno" id="enlaces">
+                        <a href="">Inicio</a>
+                        <a href="">Acerca de</a>
+                        <a href="">Contacto</a>
+                    </div>                
+                </nav>
+                <div class="container">
+                    <div class="textos">
+                        <h1>Gerson Azabache</h1>
+                        <h2>Software Developer</h2>
+                        <a href="#">Proyectos</a>
+                    </div>
+                    <img src="img/people.png" alt="imagen de gente">
                 </div>
-                <img src="img/people.png" alt="imagen de gente">
+            </header>
+            <div class="wave">
+                <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
             </div>
-        </header>
-        <div class="wave">
-            <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
-        </div>
+        </div>  
         <script src="script.js"></script>
     </body>
 </html>
