Introduje mejoras al index y nombres de menus y vinculos establecidos

--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,16 @@
                 <nav>
                     <a id="icono" class="icono" href="#">Menú</a>
                     <div class="enlaces uno" id="enlaces">
-                        <a href="index.html">Inicio</a>
-                        <a href="portfolio.html">Portfolio</a>
-                        <a href="about.html">Acerca de</a>
+                        <a href="">Inicio</a>
+                        <a href="">Acerca de</a>
                         <a href="contact.html">Contacto</a>
                     </div>                
                 </nav>
                 <div class="container">
                     <div class="textos">
-                        <h1>Gerson Azabache</h1>
+                        <h1>Contact me...</h1>
                         <h2>Software Developer</h2>
-                        <a href="#">Portfolio</a>
+                        <a href="#">Proyectos</a>
                     </div>
                     <img src="img/people.png" alt="imagen de gente">
                 </div>
