--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <div class="wrapper">
             <header>
                 <nav>
-                    <a id="icono" class="icono" href="#">Menú</a>
+                    <a id="icono" class="icono" href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
                     <div class="enlaces uno" id="enlaces">
                         <a href="index.html">Inicio</a>
                         <a href="portfolio.html">Portfolio</a>
