paginas anexas fueron creadas y con condigo duplicado del index

--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,23 @@
         <div class="wrapper">
             <header>
                 <nav>
-                    <a id="icono" class="icono" href="#">Menú</a>
+                    <a id="icono" class="icono" href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
                     <div class="enlaces uno" id="enlaces">
-                        <a href="">Inicio</a>
-                        <a href="">Acerca de</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="portfolio.html">Portfolio</a>
+                        <a href="about.html">Acerca de</a>
                         <a href="contact.html">Contacto</a>
                     </div>                
                 </nav>
                 <div class="container">
                     <div class="textos">
-                        <h1>Contact me...</h1>
+                        <h1>Gerson Azabache</h1>
                         <h2>Software Developer</h2>
-                        <a href="#">Proyectos</a>
+                        <a href="#">Portfolio</a>
                     </div>
                     <img src="img/people.png" alt="imagen de gente">
                 </div>
