--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Landing Page</title>
+        <title>Gazabache - Inicio</title>
         <link href="estilos.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
     </head>
