titulo h1 de portfolio añadido, linkes de index apuntan a las paginas correctas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="textos">
                         <h1>Gerson Azabache</h1>
                         <h2>Software Developer</h2>
-                        <a href="#">Portfolio</a>
+                        <a href="portfolio.html">Portfolio</a>
                     </div>
                     <img src="img/people.png" alt="imagen de gente">
                 </div>
