--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
                 </nav>
                 <div class="container">
                     <div class="textos">
-                        <h1>Gerson Azabache</h1>
-                        <h2>Software Developer</h2>
+                        <h1>Portfolio</h1>
+                        <!-- <h2>Software Developer</h2> -->
                         <a href="#">Portfolio</a>
                     </div>
                     <img src="img/people.png" alt="imagen de gente">
