Portfolio avanzando, cards agregados, añadiendo mas estilos

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,44 @@
                 </nav>
                 <div class="container">
                     <div class="textos">
-                        <h1>Portfolio</h1>
+                        <h1 class="subtitle">Portfolio</h1>
                         <!-- <h2>Software Developer</h2> -->
-                        <a href="#">Portfolio</a>
+                        <!-- <a href="#">Portfolio</a> -->
                     </div>
-                    <img src="img/people.png" alt="imagen de gente">
+                    <!-- <img src="img/people.png" alt="imagen de gente"> -->
+
                 </div>
+
+                <section class="container">
+                    <article>
+                        <div class="card">
+                            <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
+                            <h1>Sistema de Planillas</h1>
+                            <p class="price">C# SQL Server</p>
+                            <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
+                            <!-- <p><button>Add to Cart</button></p> -->
+                          </div>
+                    </article>
+                    <article>
+                        <div class="card">
+                            <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
+                            <h1>Sistema de Planillas</h1>
+                            <p class="price">C# SQL Server</p>
+                            <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
+                            <!-- <p><button>Add to Cart</button></p> -->
+                          </div>
+                    </article>
+                    <article>
+                        <div class="card">
+                            <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
+                            <h1>Sistema de Planillas</h1>
+                            <p class="price">C# SQL Server</p>
+                            <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
+                            <!-- <p><button>Add to Cart</button></p> -->
+                          </div>
+                    </article>
+                </section>
+
             </header>
             <div class="wave">
                 <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
