--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <div class="wave">
                 <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
             </div>
+            <!-- <footer>Gerson Azabache</footer> -->
         </div>  
         <script src="script.js"></script>
+        
+        <div class="credits">Iconos diseñados por <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.es/" title="Flaticon"> www.flaticon.es</a></div>        
     </body>
 </html>
