--- a/portfolio.html
+++ b/portfolio.html
@@ -39,25 +39,25 @@
                         <div class="card">
                             <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
                             <h1>Sistema de Planillas</h1>
-                            <p class="price">C# SQL Server</p>
-                            <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
+                            <p class="price">C# SQL Crystal Reports</p>
+                            <p>Sistema desktop realizado para una empresa embotelladora, que tiene los módulos de datos mestros de empleados, remuneraciones, vacaciones y gratificaciones</p>
                             <!-- <p><button>Add to Cart</button></p> -->
                           </div>
                     </article>
                     <article>
                         <div class="card">
-                            <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
-                            <h1>Sistema de Planillas</h1>
-                            <p class="price">C# SQL Server</p>
-                            <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
+                            <img src="img/SIGFront.png" alt="Denim Jeans" style="width:100%">
+                            <h1>Sistema de Información Gerencial</h1>
+                            <p class="price">C# SQL DevExpress Crystal Reports</p>
+                            <p>Sistema SIG para el control de avance y proyección de ventas y reportería para gerencia y jefaturas</p>
                             <!-- <p><button>Add to Cart</button></p> -->
                           </div>
                     </article>
                     <article>
                         <div class="card">
-                            <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
-                            <h1>Sistema de Planillas</h1>
-                            <p class="price">C# SQL Server</p>
+                            <img src="img/MMTO.png" alt="Denim Jeans" style="width:100%">
+                            <h1>Módulo de activos</h1>
+                            <p class="price">vb.net SQL Crystal Reports DotNetBar</p>
                             <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
                             <!-- <p><button>Add to Cart</button></p> -->
                           </div>
