Pagina completada version 1

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
         <title>Landing Page</title>
         <link href="estilos.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="wrapper">
@@ -20,18 +21,35 @@
                     <div class="enlaces uno" id="enlaces">
                         <a href="index.html">Inicio</a>
                         <a href="portfolio.html">Portfolio</a>
-                        <a href="about.html">Acerca de</a>
-                        <a href="contact.html">Contacto</a>
+                        <a href="about.html">Acerca de</a>                        
                     </div>                
                 </nav>
                 <div class="container">
                     <div class="textos">
-                        <h1>Gerson Azabache</h1>
-                        <h2>Software Developer</h2>
-                        <a href="#">Portfolio</a>
+                        <h1 class="subtitle">Contact me</h1>
+                        <!-- <h2>Software Developer</h2> -->
+                        <!-- <a href="#">Portfolio</a> -->
                     </div>
-                    <img src="img/people.png" alt="imagen de gente">
+                    <!-- <img src="img/people.png" alt="imagen de gente"> -->
+
                 </div>
+
+                <section class="container">
+                    <article>
+                        <div class="cardContact">
+                            <img src="img/mifoto2.jpg" alt="John" style="width:100%">
+                            <h1>Gerson Azabache</h1>
+                            <p class="title">Software developer & Engineer</p>
+                            <p>.NET C# VB.NET SQL Angular</p>
+                            <a href="https://github.com/GeaSmart" target="blank"><i class="fa fa-github"></i></a>
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <a href="https://www.linkedin.com/in/gazabache/" target="blank"><i class="fa fa-linkedin"></i></a>
+                            <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+                            <!-- <p><button>Contact</button></p> -->
+                          </div>
+                    </article>
+                </section>
+
             </header>
             <div class="wave">
                 <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
