Texto de cards de portfolio justificados y tamaño de fuente de TAG del card reducida

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
                         <div class="card">
                             <img src="img/planillasFront.png" alt="Denim Jeans" style="width:100%">
                             <h1>Sistema de Planillas</h1>
-                            <p class="price">C# SQL Crystal Reports</p>
-                            <p>Sistema desktop realizado para una empresa embotelladora, que tiene los módulos de datos mestros de empleados, remuneraciones, vacaciones y gratificaciones</p>
+                            <p class="tag">C# SQL Crystal Reports</p>
+                            <p>Sistema desktop realizado para una empresa embotelladora, que tiene los módulos de datos maestros de empleados, remuneraciones, así como vacaciones y gratificaciones</p>
                             <!-- <p><button>Add to Cart</button></p> -->
                           </div>
                     </article>
@@ -47,7 +47,7 @@
                         <div class="card">
                             <img src="img/SIGFront.png" alt="Denim Jeans" style="width:100%">
                             <h1>Sistema de Información Gerencial</h1>
-                            <p class="price">C# SQL DevExpress Crystal Reports</p>
+                            <p class="tag">C# SQL DevExpress Crystal Reports</p>
                             <p>Sistema SIG para el control de avance y proyección de ventas y reportería para gerencia y jefaturas</p>
                             <!-- <p><button>Add to Cart</button></p> -->
                           </div>
@@ -56,8 +56,8 @@
                         <div class="card">
                             <img src="img/MMTO.png" alt="Denim Jeans" style="width:100%">
                             <h1>Módulo de activos</h1>
-                            <p class="price">vb.net SQL Crystal Reports DotNetBar</p>
-                            <p>Sistema desktop reaizado para una empresa embotelladora, que tiene los módulos de remuneraciones, vacaciones y gratificaciones</p>
+                            <p class="tag">vb.net SQL Crystal Reports DotNetBar</p>
+                            <p>Sistema de control de activos, mantenimientos de activos así como personal y programación de ordenes de trabajo.</p>
                             <!-- <p><button>Add to Cart</button></p> -->
                           </div>
                     </article>
